added image importer functions and rle decoder

--- a/properties/dev.yaml
+++ b/properties/dev.yaml
@@ -1,3 +1,4 @@
 environment: "dev"
 data_absolute_path: "D:/kaggle/sartorius-cell-instance-segmentation/"
 train_meta_data_path: "train.csv"
+train_image_data_path: "train/"
